<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="history_title">You Game History</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>
    <string name="win">You win!</string>
    <string name="draw">Draw</string>
    <string name="lose">Computer wins!</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="vs">V.S.</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="stats">Your all time statistics</string>
    <string name="scissors">scissors</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>